# SmartMutex

./: CMakeLists.txt  Makefile  README.md
include/: smart_mutex.h
test/: smoke_test.cpp
